syntax = "proto3";

option csharp_namespace = "UserService.API.Protos";

package userservice;

service UserInfoGrpc {
  rpc CreateNewInformationUser (CreateNewInformationUserRequest)  returns (CreateNewInformationUserResponse);
     
}

message CreateNewInformationUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

message CreateNewInformationUserResponse {
  bool is_success = 1;
}
